[package]
name = "axum-learn"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.7"
chrono = { version = "0.4.42", features = ["serde"] }
csv = "1.4.0"
reqwest = "0.12.26"
rss = "2.0.12"
serde = { version = "1.0.228", features = ["derive"] }
sqlx = { version = "0.8.6", features = ["chrono", "postgres", "runtime-tokio", "time"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
tower-http = { version = "0.6.8", features = ["cors"] }
